<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:hint="@string/hint_authors"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:hint="@string/hint_publisher"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:hint="@string/hint_isbn"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:background="@drawable/search_button_shape"
        android:text="@string/search"
        android:textColor="#ffffff"
        android:textSize="@dimen/search_button_text_size" />
</LinearLayout>